--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">instagram Feed</string>
+    <string name="unset_image">unset image</string>
+    <string name="unset_with_ion">unset with ion</string>
+    <string name="load_image">load image</string>
 </resources>
